--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: lovals
     env: java
     buildCommand: mvn clean install -DskipTests
-    startCommand: java -Dserver.port=$PORT -jar target/valentine-0.0.1-SNAPSHOT.jar
+    startCommand: java -Dserver.port=$PORT -jar target/valentine-website-1.0.0.jar
     envVars:
       - key: JAVA_VERSION
         value: 17
